After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748076 - vaapipluginbase: Quell critical if the allocation query does not return a pool
vaapipluginbase: Quell critical if the allocation query does not return a pool
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 743569
 
 
Reported: 2015-04-17 19:18 UTC by Olivier Crête
Modified: 2015-04-19 07:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapipluginbase: The allocation query can return without a pool (1.63 KB, patch)
2015-04-17 19:19 UTC, Olivier Crête
none Details | Review

Description Olivier Crête 2015-04-17 19:18:39 UTC
It is valid for the allocation query to return a min/max but not a pool if downstream doesn't have a special pool, but wants to inform upstream of how many buffers it will need.
Comment 1 Olivier Crête 2015-04-17 19:19:52 UTC
Created attachment 301870 [details] [review]
vaapipluginbase: The allocation query can return without a pool

It is possible to return the min/max/size without actually providing
a pool. This way the source knows how many buffers downstream needs.
Comment 2 Víctor Manuel Jáquez Leal 2015-04-19 07:46:18 UTC
commit bd86647970b17995f1d73c05e048f86fdd31eed5
Author: Olivier Crete <olivier.crete@collabora.com>
Date:   Fri Apr 17 19:10:35 2015 +0000

    vaapipluginbase: The allocation query can return without a pool
    
    It is possible to return the min/max/size without actually providing
    a pool. This way the source knows how many buffers downstream needs.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=748076